--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -15,7 +15,6 @@
   font-family: $portoSansStencil;
   box-shadow: 0px 1px 10px 0 rgba(0, 0, 0, 0.1);
   padding: 0.1rem 1.25rem;
-  overflow: hidden;
   // transition: all 0.5s ease;
 
   // .top {
@@ -159,7 +158,7 @@
 
   &__mobile_overlay {
     position: fixed;
-    z-index: -999;
+    // z-index: -999;
     top: 0%;
     left: 0%;
     opacity: 0;
